actualizando algunos detalles

--- a/index.html
+++ b/index.html
@@ -33,6 +33,34 @@
           >joji - WORLD$TAR MONEY</a
         >
       </li>
+      <li class="list__video">
+        <a
+          class="video__link"
+          href="https://youtu.be/SDTZ7iX4vTQ?list=RDtvNSXS4x9nc"
+          >Foster The People - Pumped Up Kicks (Official Video)</a
+        >
+      </li>
+      <li class="list__video">
+        <a
+          class="video__link"
+          href="https://www.youtube.com/watch?v=MV_3Dpw-BRY&list=RDtvNSXS4x9nc&index=27"
+          >Kavinsky - Nightcall</a
+        >
+      </li>
+      <li class="list__video">
+        <a
+          class="video__link"
+          href="https://www.youtube.com/watch?v=CVFkvTKfcqk&list=RDtvNSXS4x9nc&index=29"
+          >Project X Pursuit Of Happiness</a
+        >
+      </li>
+      <li class="list__video">
+        <a
+          class="video__link"
+          href="https://www.youtube.com/watch?v=Pw-0pbY9JeU&list=RDtvNSXS4x9nc&index=31"
+          >twenty one pilots - Ride</a
+        >
+      </li>
     </ol>
   </body>
 </html>
